@@ -1,3 +1,8 @@
+2009-08-05  Trevor Smigiel  <Trevor_Smigiel@playstation.sony.com>
+
+	* ld-spu/fixup.d: New.
+	* ld-spu/fixup.s: New.
+
 2009-08-05  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* ld-arm/cortex-a8-far-1.s: New.
